--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,10 @@
 sonar.host.url=http://sonar.synerty.com
 sonar.projectKey=peek-agent
 sonar.projectVersion=1.0
-sonar.modules=peekAgent
-peekAgent.sonar.projectName=peek-agent
-peekAgent.sonar.language=py
-peekAgent.sonar.projectBaseDir=peek_agent
+sonar.modules=peekAgentPy,peekAgentTs
+peekAgentPy.sonar.projectName=peek-agent
+peekAgentPy.sonar.language=py
+peekAgentPy.sonar.projectBaseDir=peek_agent
+peekAgentTs.sonar.projectName=peek-agent
+peekAgentTs.sonar.language=ts
+peekAgentTs.sonar.projectBaseDir=peek_agent
