PEEK-539: imp: gitlab pipeline now triggers on push, fixed sonar file masks

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,9 @@ sonar.projectVersion=1.0
 sonar.modules=peekAgentPy,peekAgentTs
 peekAgentPy.sonar.projectName=peek-agent
 peekAgentPy.sonar.language=py
+peekAgentPy.sonar.inclusions=**/*.py
 peekAgentPy.sonar.projectBaseDir=peek_agent
 peekAgentTs.sonar.projectName=peek-agent
 peekAgentTs.sonar.language=ts
+peekAgentTs.sonar.inclusions=**/*.ts
 peekAgentTs.sonar.projectBaseDir=peek_agent
